Fix dark mode view

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -4,7 +4,7 @@
 
 
 body {
-    background-color: white;
+    background-color: #f9f9f9;
     color: black;
   }
   
